thursday afternoon update

--- a/personalblogsite/aboutme.html
+++ b/personalblogsite/aboutme.html
@@ -8,26 +8,33 @@
   <link href="https://fonts.googleapis.com/css?family=Catamaran:200,400,800" rel="stylesheet">
   <link rel="icon" href="images/mountain.png">
   <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="pages.css">
+
+
 </head>
 
 <body>
   <header class="titleblock">
     <div>
-      <h1><a href="index.html">Brandon's Web Dev Blog</a></h1>
-      <h2>Learning to Learn</h2>
+      <h1 class="blogh1"><a class="home" href="index.html">Brandon's Web Dev Progress Blog</a></h1>
+      <h2 class="subtitle">About Me</h2>
     </div>
     <nav class="navigation">
       <ul class="unorderedlist">
-        <li class="headernav"><a href="learningtolearn">Learning to Learn</a></li>
-        <li class="headernav"><a href="settinggoals.html">Setting Goals</a></li>
-        <li class="headernav"><a href="meetups.html">Meetups</a></li>
-        <li class="headernav"><a href="aboutme.html">About Me</a></li>
+        <li class="navli"><a href="learningtolearn">Learning to Learn</a></li>
+        <li class="navli"><a href="settinggoals.html">Setting Goals</a></li>
+        <li class="navli"><a href="meetups.html">Meetups</a></li>
+        <li class="navli"><a href="aboutme.html">About Me</a></li>
       </ul>
     </nav>
+
   </header>
-  <main>
+
+  <main class="aboutme">
+    <img src="" alt="">
+    <h3></h3>
+    <p></p>
   </main>
   <footer>
     <p class="copyright"><small>&copy; 2017 Brandon Johnson</small></p>
