--- a/personalblogsite/aboutme.html
+++ b/personalblogsite/aboutme.html
@@ -33,8 +33,8 @@
 
   <main class="aboutme">
     <img src="" alt="">
-    <h3></h3>
-    <p></p>
+    <h3>Brandon M. Johnson</h3>
+    <p>I am a full stack web developer based in Golden, Colorado.  Currently attending Galvanize, Inc. Web Development intensive.  Find me on <a href="http://www.github.com/bmj1985">GitHub</a> and <a href="http://www.linkedin.com/in/bmj1985">LinkedIn.</a></p>
   </main>
   <footer>
     <p class="copyright"><small>&copy; 2017 Brandon Johnson</small></p>
