udated aboutme, added content to all other pages

--- a/personalblogsite/aboutme.html
+++ b/personalblogsite/aboutme.html
@@ -32,9 +32,11 @@
   </header>
 
   <main class="aboutme">
-    <img src="" alt="">
-    <h3>Brandon M. Johnson</h3>
-    <p>I am a full stack web developer based in Golden, Colorado.  Currently attending Galvanize, Inc. Web Development intensive.  Find me on <a href="http://www.github.com/bmj1985">GitHub</a> and <a href="http://www.linkedin.com/in/bmj1985">LinkedIn.</a></p>
+    <img class="aboutmephoto" src="images/aboutme.jpg" alt="a picture of the author">
+    <div class="textcontainer">
+      <h3 class="aboutmeheading">Brandon M. Johnson</h3>
+      <p class="aboutmedescription">I am a full stack web developer based in Golden, Colorado. Currently attending Galvanize, Inc. Web Development intensive. Find me on <a href="http://www.github.com/bmj1985">GitHub</a> and <a href="http://www.linkedin.com/in/bmj1985">LinkedIn.</a></p>
+    </div>
   </main>
   <footer>
     <p class="copyright"><small>&copy; 2017 Brandon Johnson</small></p>
