--- a/personalblogsite/aboutme.html
+++ b/personalblogsite/aboutme.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Brandon M. Johnson Web Dev Blog: Goal Setting</title>
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:200,400,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800" rel="stylesheet">
   <link rel="icon" href="images/mountain.png">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="main.css">
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-  <header class="titleblock">
+  <header class="blogtitleblock">
     <div>
       <h1 class="blogh1"><a class="home" href="index.html">Brandon's Web Dev Progress Blog</a></h1>
       <h2 class="subtitle">About Me</h2>
     </div>
     <nav class="navigation">
       <ul class="unorderedlist">
-        <li class="navli"><a href="learningtolearn">Learning to Learn</a></li>
+        <li class="navli"><a href="learningtolearn.html">Learning to Learn</a></li>
         <li class="navli"><a href="settinggoals.html">Setting Goals</a></li>
         <li class="navli"><a href="meetups.html">Meetups</a></li>
         <li class="navli"><a href="aboutme.html">About Me</a></li>
@@ -35,7 +35,8 @@
     <img class="aboutmephoto" src="images/aboutme.jpg" alt="a picture of the author">
     <div class="textcontainer">
       <h3 class="aboutmeheading">Brandon M. Johnson</h3>
-      <p class="aboutmedescription">I am a full stack web developer based in Golden, Colorado. Currently attending Galvanize, Inc. Web Development intensive. Find me on <a href="http://www.github.com/bmj1985">GitHub</a> and <a href="http://www.linkedin.com/in/bmj1985">LinkedIn.</a></p>
+      <p class="aboutmedescription">I am a full stack web developer based in Golden, Colorado. Currently attending Galvanize, Inc. Web Development intensive. Find me on <a class="aboutmelink" href="http://www.github.com/bmj1985">GitHub</a> and <a class=
+        "aboutmelink" href="http://www.linkedin.com/in/bmj1985">LinkedIn.</a></p>
     </div>
   </main>
   <footer>
@@ -43,14 +44,13 @@
     <nav class="footercontainer">
       <ul class="footernav">
         <li class="footerlist"><a class="footerlink" href="index.html">Home</a></li>
-        <li class="footerlist"><a class="footerlink" href="learningtolearn">Learning to Learn</a></li>
+        <li class="footerlist"><a class="footerlink" href="learningtolearn.html">Learning to Learn</a></li>
         <li class="footerlist"><a class="footerlink" href="settinggoals.html">Setting Goals</a></li>
         <li class="footerlist"><a class="footerlink" href="meetups.html">Meetups</a></li>
         <li class="footerlist"><a class="footerlink" href="aboutme.html">About Me</a></li>
       </ul>
     </nav>
   </footer>
-
 </body>
 
 </html>
